--- a/css/style.css
+++ b/css/style.css
@@ -219,6 +219,24 @@ ul#navigation li:hover {
 	filter:alpha(opacity=100);
 }
 
+#bottom-nav img,
+#next img {
+    -webkit-transition: all 500ms ease-in-out;
+    -moz-transition: all 500ms ease-in-out;
+    -o-transition: all 500ms ease-in-out;
+    -ms-transition: all 500ms ease-in-out;
+    transition: all 500ms ease-in-out;
+}
+
+#bottom-nav img.up,
+#next img.up {
+    -webkit-transform: rotate(180deg);
+    -moz-transform: rotate(180deg);
+    -o-transform: rotate(180deg);
+    -ms-transform: rotate(180deg);
+    transform: rotate(180deg);
+}
+
 /* HOME SLIDE */
 
 
@@ -307,7 +325,7 @@ ul#navigation li:hover {
 
 .story .content-box{
 	height:460px; 
-	margin-top:-260px;
+	margin-top:-280px;
 	}
 
 .story-title {  
@@ -333,52 +351,52 @@ ul#navigation li:hover {
 	display:block;
 	overflow:auto;
 	margin-top:40px;
-	height:290px;
+	height:340px;
 	background: url(../images/arrow.png) no-repeat;
 	background-position: 0px 0px;
 }
 
 .first {
 	margin-left:100px;
-	margin-top:26px;
+	margin-top:5px;
 }
 
 .second {
-	margin-left:70px;
-	margin-top:26px;
+	margin-left:10px;
+	margin-top:88px;
 }
 
 .third {
 	margin-left:50px;
-	margin-top:26px;
+	margin-top:5px;
 }
 
 .fourth {
-	margin-left:90px;
-	margin-top:26px;
+	margin-left:30px;
+	margin-top:88px;
 }
 
 .fifth {
 	margin-left:50px;
-	margin-top:26px;
+	margin-top:42px;
 }
 
 .sixth {
-	margin-left:80px;
-	margin-top:26px;
+	margin-left:120px;
+	margin-top:42px;
 }
 .seventh {
-	margin-left:20px;
-	margin-top:26px;
+	margin-left:60px;
+	margin-top:42px;
 }
 
 .heart {  
 	display:block;
 	position: relative;
 	text-indent: -9999px;
-	width: 46px;
+	width: 45px;
 	height: 44px;
-	background: url(../images/heart.png) no-repeat;
+	background: url(../images/hearts.png) no-repeat;
     float:left;
     cursor: pointer;   
 }
@@ -386,8 +404,7 @@ ul#navigation li:hover {
 .heart span {
 	position: absolute;
 	top: 0; left: 0; bottom: 0; right: 0;
-	background: url(../images/heart.png) no-repeat;
-	background-position: -46px 0;
+	background: url(../images/hearts.png) no-repeat;
 	opacity: 0;
 	filter:alpha(opacity=0);
 	-webkit-transition: opacity 0.5s;
@@ -395,10 +412,36 @@ ul#navigation li:hover {
 	-o-transition:      opacity 0.5s;
 	-ms-transition:     opacity 0.5s;
 }
+
+.coral {
+	background-position: 0 0;	
+}
+
+.coral span {
+	background-position: -45px 0;
+}
+
+.mint {
+	background-position: 0 -44px;
+}
+
+.mint span {
+	background-position: -45px -44px;
+}
+
+.combined {
+	background-position: 0 -88px;
+}
+
+.combined span {
+	background-position: -45px -88px;
+}
+
 .heart:hover span {
 	opacity: 1;
 	filter:alpha(opacity=100);
 }
+
 .highlights h4 {
 	display:none;
   	position:absolute;
@@ -408,7 +451,7 @@ ul#navigation li:hover {
     left: 0;
     right: 0;
   	width:550px;
-  	top:80px;
+  	top:90px;
 	text-align: center;
 	opacity: 0;
 	filter:alpha(opacity=0);
@@ -426,8 +469,6 @@ ul#navigation li:hover {
 	font-size: 40px;
 	line-height: 40px;
 }
-
-
 
 /* PICTURES SLIDE */
 
@@ -464,7 +505,7 @@ ul#navigation li:hover {
 	display:block;
 	overflow:auto;
 	margin-top:15px;
-	width:564px;
+	width:534px;
 	height:125px;
 	margin-left: auto;
     margin-right: auto;
