--- a/css/style.css
+++ b/css/style.css
@@ -17,20 +17,7 @@
          url('../fonts/blanch_caps_inline-webfont.svg#BlanchCapsInline') format('svg');
     font-weight: normal;
     font-style: normal;
-} 
-/*
-
-@font-face {
-    font-family: 'PacificoRegular';
-    src: url('Pacifico-webfont.eot');
-    src: url('Pacifico-webfont.eot?#iefix') format('embedded-opentype'),
-         url('Pacifico-webfont.woff') format('woff'),
-         url('Pacifico-webfont.ttf') format('truetype'),
-         url('Pacifico-webfont.svg#PacificoRegular') format('svg');
-    font-weight: normal;
-    font-style: normal;
-}*/
-
+}
 
 /* FONT & TEXT STYLES */
 
@@ -49,14 +36,13 @@ h2{
 	font-weight:400;
 	font-style:normal;
 	margin:15px;
-	
 }
 h3 {
 	font-family: 'BlanchCapsRegular', arial;
 	font-size:53px;
 	font-weight:normal;
 	color:#FFFFFF;
-	margin:20px 0px 20px 0;
+	margin:20px 0 20px 0;
 	
 }
 h4 {
@@ -209,15 +195,6 @@ ul#navigation li:hover {
 	opacity: 1;
 	filter:alpha(opacity=100);
 }
-#next .box{
-	position:absolute;
-	width:100%;
-	height:170px;
-	margin:0;
-	background-color:#383838;
-	opacity: 1;
-	filter:alpha(opacity=100);
-}
 
 #bottom-nav img,
 #next img {
@@ -226,6 +203,11 @@ ul#navigation li:hover {
     -o-transition: all 500ms ease-in-out;
     -ms-transition: all 500ms ease-in-out;
     transition: all 500ms ease-in-out;
+}
+
+#bottom-nav,
+#next {
+	-webkit-transform: translate3D(0, 0, 0);
 }
 
 #bottom-nav img.up,
@@ -764,6 +746,12 @@ ul#navigation li:hover {
 .people-details h4 {
 	margin: 10px 0;
 }
+
+.people-details img {
+	width: 350px;
+	height: 350px;
+}
+
 .groomsmen{
 	display:block;
 	position:relative;
@@ -807,7 +795,7 @@ ul#navigation li:hover {
 	text-indent: -9999px;
 	width: 51px;
 	height: 51px;
-	background: url(../images/partythumb-sprite.jpg) no-repeat;
+	background: url(../images/partythumb-sprite.png) no-repeat;
     float:left;
     margin-right:10px;   
 }
@@ -815,7 +803,7 @@ ul#navigation li:hover {
 .wp span {
 	position: absolute;
 	top: 0; left: 0; bottom: 0; right: 0;
-	background: url(../images/partythumb-sprite.jpg) no-repeat;
+	background: url(../images/partythumb-sprite.png) no-repeat;
 	background-position: -51px 0;
 	opacity: 0;
 	filter:alpha(opacity=0);
@@ -830,54 +818,32 @@ ul#navigation li:hover {
 }
 
 .groomsmen .one span {
-	background: url(../images/partythumb-sprite.jpg) -51px 0;
+	background: url(../images/partythumb-sprite.png) -51px 0;
 }
 .groomsmen .two span {
-	background: url(../images/partythumb-sprite.jpg) -102px 0;
+	background: url(../images/partythumb-sprite.png) -102px 0;
 }
 .groomsmen .three span {
-	background: url(../images/partythumb-sprite.jpg) -153px 0;
+	background: url(../images/partythumb-sprite.png) -153px 0;
 }
 .groomsmen .four span {
-	background: url(../images/partythumb-sprite.jpg) -204px 0;
+	background: url(../images/partythumb-sprite.png) -204px 0;
 }
-.groomsmen .five span {
-	background: url(../images/partythumb-sprite.jpg) -255px 0;
-}
-.groomsmen .six span {
-	background: url(../images/partythumb-sprite.jpg) -306px 0;
-}
-.groomsmen .seven span {
-	background: url(../images/partythumb-sprite.jpg) -357px 0;
-}
-
 
 .bridesmaids .one span {
-	background: url(../images/partythumb-sprite.jpg) -408px 0;
+	background: url(../images/partythumb-sprite.png) -408px 0;
 }
 .bridesmaids .two span {
-	background: url(../images/partythumb-sprite.jpg) -459px 0;
+	background: url(../images/partythumb-sprite.png) -459px 0;
 }
 .bridesmaids .three span {
-	background: url(../images/partythumb-sprite.jpg) -510px 0;
+	background: url(../images/partythumb-sprite.png) -510px 0;
 }
 .bridesmaids .four span {
-	background: url(../images/partythumb-sprite.jpg) -561px 0;
+	background: url(../images/partythumb-sprite.png) -561px 0;
 }
-.bridesmaids .five span {
-	background: url(../images/partythumb-sprite.jpg) -612px 0;
-}
-.bridesmaids .six span {
-	background: url(../images/partythumb-sprite.jpg) -663px 0;
-}
-.bridesmaids .seven span {
-	background: url(../images/partythumb-sprite.jpg) -714px 0;
-}
-
-
 
 /* RSVP */
-
 
 
 .rsvp {
@@ -935,138 +901,13 @@ ul#navigation li:hover {
 	background-color:#FFFFFF;
 }
 
-.labels {
-	position:relative;
-	float:left;
-	width:240px;
-	height:240px;
-	margin-top:0px;
-}
-.labels h3{
-	padding-bottom:6px;
-	text-align: right;
-	font-family: 'BlanchCapsRegular', arial;
-	font-size:53px;
-	font-weight:normal;
-	color:#FFFFFF;
-	margin:20px 0px 20px 0;
-}
-.guest-name span{
-	color:rgb(248,191,84);
-}
-.forms{
-	position:relative;
-	width:210px;
-	height:240px;
-	margin-top:0px;
-	margin-bottom:0px;
-	margin-left:15px;
-	margin-right:0px;
-	float:left;
-}
-#name-form{
-	width:200px;
-	height:30px;
-	font-size:25px;
-	color:#4a4a4a;
-	margin-top:15px;
-}
-#guest-form{
-	width:200px;
-	height:30px;
-	font-size:25px;
-	color:#4a4a4a;
-	margin-top:15px;
-}
-#attending-form{
-	width:200px;
-	height:30px;
-	font-size:25px;
-	color:#4a4a4a;
-	margin-top:15px;
-}
-#email-form{
-	width:200px;
-	height:30px;
-	font-size:25px;
-	color:#4a4a4a;
-	margin-top:15px;
-}
-.submit-container {
-	position:relative;
-	width:205px;
-	height:240px;
-	margin-top:0px;
-	margin-bottom:0px;
-	margin-left:55px;
-	margin-right:0px;
-	float:left;
-}
-.password {
-	text-align: center;
-	margin-top:30px;
-	margin-bottom:15px;
-	margin-right:0;
-	margin-left:0;
-}
-#password-form{
-	display:block;
-	width:200px;
-	height:30px;
-	font-size:25px;
-	color:#4a4a4a;
-	margin:0;
-
-}
-.submit{
-	margin:0;
-	padding:0;
-	width:200px;
-	
-}
-.submit-btn{
-	position:relative;
-	padding: 5px 53px 5px 53px;
-	margin-top:20px;
-	margin-left:0;
-	margin-right:0;
-	margin-bottom:0;
-	background-color:rgb(248,191,84);
-	font-family: 'BlanchCapsRegular', arial;
-	font-size:55px;
-	font-weight:normal;
-	color:#FFFFFF;
-	text-decoration:none;
-	border:0;
-	cursor:pointer;
-	 
-	 -webkit-transition-property:color, background-color;  
-	 -webkit-transition-duration: .5s, .5s;  
-	 -webkit-transition-timing-function: linear, ease-in;
-	 -moz-transition-property:color, background-color;  
-	 -moz-transition-duration: .5s, .5s;  
-	 -moz-transition-timing-function: linear, ease-in; 
-	 -o-transition-property:color, background-color;  
-	 -o-transition-duration: .5s, .5s;  
-	 -o-transition-timing-function: linear, ease-in; 
-	 -ms-transition-property:color, background-color;  
-	 -ms-transition-duration: .5s, .5s;  
-	 -ms-transition-timing-function: linear, ease-in; 
-}
-
-.submit-btn:hover {
-	color: rgb(248,191,84);
-	background-color:#FFFFFF;
-	border:0;
-}
-
 .questions{
 	clear:both;
 	margin-top:60px;
 	text-align:center;
 }
 .questions a{
-	color:rgb(248,191,84);
+	color: rgb(255,143,158);
 	text-decoration:none;
 }
 
@@ -1100,69 +941,4 @@ ul#navigation li:hover {
 	color:rgb(230,230,230);
 	text-align: center;
 	margin-bottom:60px;
-}
-
-.registry-imgs{
-	display:relative;
-	margin:0 auto;
-	width:644px;
-}
-
-.registry {  
-	display:block;
-	position: relative;
-	text-indent: -9999px;
-	width: 282px;
-	height: 99px;
-    float:left;
-    margin-right:20px;
-    margin-left:20px;   
-}
-
-.registry span {
-	position: absolute;
-	top: 0; left: 0; bottom: 0; right: 0;
-	background-color: rgb(232,86,107);
-	background: url(../images/wsonoma.jpg) no-repeat;
-	background-position: -282px 0;
-	opacity: 0;
-	filter:alpha(opacity=0);
-	-webkit-transition: opacity 0.5s;
-	-moz-transition:    opacity 0.5s;
-	-o-transition:      opacity 0.5s;
-	-ms-transition:     opacity 0.5s;
-}
-.registry:hover span {
-	opacity: 1;
-	filter:alpha(opacity=100);
-}
-
-.wsonoma{
-	background: url(../images/wsonoma.jpg) no-repeat;
-}
-.wsonoma span{
-	background: url(../images/wsonoma.jpg) no-repeat;
-	background-position: -282px 0;
-}
-.pbarn{
-	background: url(../images/pbarn.jpg) no-repeat;
-}
-.pbarn span{
-	background: url(../images/pbarn.jpg) no-repeat;
-	background-position: -282px 0;
-}
-.bbeyond {
-	clear:both;
-	background: url(../images/bbeyond.jpg) no-repeat;
-}
-.bbeyond span{
-	background: url(../images/bbeyond.jpg) no-repeat;
-	background-position: -282px 0;
-}
-.target{
-	background: url(../images/target.jpg) no-repeat;
-}
-.target span{
-	background: url(../images/target.jpg) no-repeat;
-	background-position: -282px 0;
 }
