--- a/css/style.css
+++ b/css/style.css
@@ -948,3 +948,17 @@ ul#navigation li:hover {
 	text-align: center;
 	margin-bottom:60px;
 }
+
+.registry-imgs {
+	text-align: center;
+	padding-left: 30px;
+}
+
+.registry-imgs img {
+	height: 90px;
+	margin-right: 30px;
+}
+
+.registry-imgs a:hover img {
+	opacity: 0.5;
+}
