--- a/css/style.css
+++ b/css/style.css
@@ -694,7 +694,12 @@ ul#navigation li:hover {
 }
 
 .info.btn{
-	padding: 10px 95px 10px 95px;
+	display:inline-block;
+	width: 100%;
+	height: 45px;
+	padding-top: 17px;
+	margin-top: 10px;
+	/*padding: 10px 95px 10px 95px;*/
 	background-color:rgb(248,191,84);
 	color:#FFFFFF;
 }
@@ -703,6 +708,7 @@ ul#navigation li:hover {
 	color: rgb(220,79,83);
 	background-color:#FFFFFF;
 }
+/*
 .directions.btn,
 .menu.btn{
 	padding: 10px 79px 10px 79px;
@@ -713,7 +719,7 @@ ul#navigation li:hover {
 .menu.btn:hover{
 	color: rgb(220,79,83);
 	background-color:#FFFFFF;
-}
+}*/
 
 
 
